fix(theme/buttons): fix alignment issues (#1767)

--- a/packages/theme/src/theme/_visual-helpers.scss
+++ b/packages/theme/src/theme/_visual-helpers.scss
@@ -46,17 +46,15 @@
 /// @param {Color} $btn-color [$btn-default-bg] - button background color to tint
 @mixin btn-inverse-colors($btn-color: $btn-default-bg) {
 	// we have a border but we cannot use box-sizing: border-box because we don't have a height.
-	// so we change the line-height and the min-height to match 3.5rem ($btn-line-height) - borders
-	$border-width: 1.5px;
-	$btn-inverse-line-height: calc(#{$btn-line-height} - (2 * #{$border-width}));
+	// so we change the line-height to match 3.5rem ($btn-line-height) - borders
+	$border-width: 0.15rem;
 
 	&.btn-inverse {
 		background-color: transparent;
 		color: $btn-color;
 		box-shadow: none;
 		border: $border-width solid $btn-color;
-		line-height: $btn-inverse-line-height;
-		min-height: $btn-inverse-line-height;
+		line-height: $btn-line-height - (2 * $border-width);
 
 		&:active,
 		&.active,
